frontends/default/stylesheets/stylesheet.css
/* ... */
.active-scaffold .show-view dd {
float: left;
font: bold 14px arial;
padding-left: 5px;
margin-bottom: 5px;
}

/* Form
   ============================== */

.active-scaffold .submit {
font-weight: bold;
font-size: 14px;
font-family: Arial, sans-serif;
letter-spacing: 0;
margin: 0;
margin-top: 5px;
}

.active-scaffold form p {
clear: both;
}

.active-scaffold fieldset {
border: none;
}

.active-scaffold h4,
.active-scaffold h5 {
padding: 2px;
margin: 0;
text-transform: none;
color: #1F7F00;
letter-spacing: -1px;
font: bold 16px arial;
}

.active-scaffold h5 {
padding: 0;
margin: 5px 0 2px 0;
font-size: 14px;
letter-spacing: 0;
}

.active-scaffold ol {
clear: both;
float: none;
padding: 2px;
margin-left: 5px;
list-style: none;
}

.active-scaffold p.form-footer {
clear: both;
}

.active-scaffold a.as_cancel,
.active-scaffold p.form-footer a {
font: bold 14px arial, sans-serif;
letter-spacing: 0;
}

/* Form :: Fields
   ============================== */

.active-scaffold li.form-element {
clear: both;
padding-top: 2px;
}

.active-scaffold label {
font: normal 11px verdana, sans-serif;
color: #555;
}

.active-scaffold li.form-element dt {
float: left;
width: 12em;
padding: 6px 0;
}

.active-scaffold li.form-element dd {
float: left;
}

.active-scaffold li.form-element dd input[type="checkbox"] {
margin-top: 6px;
}

.active-scaffold .form dd {
margin: 0;
}


.active-scaffold .description {
display: inline-block;
color: #999;
font-size: 10px;
margin-left: 5px;
}

.active-scaffold .required label {
font-weight: bold;
}

.active-scaffold label.example {
font-size: 11px;
font-family: arial;
color: #888;
}

.active-scaffold input.text-input,
.active-scaffold select {
font: bold 16px arial;
letter-spacing: -1px;
border: solid 1px #1F7F00;
}

.active-scaffold input.text-input {
padding: 2px;
}

.active-scaffold .fieldWithErrors input,
.active-scaffold .fieldWithErrors textarea,
.active-scaffold .fieldWithErrors select {
border: solid 1px #f00;
}

.active-scaffold select {
padding: 1px;
}

.active-scaffold input.example {
color: #aaa;
}

.active-scaffold select:focus,
.active-scaffold input.text-input:focus {
background-color: #ffc;
}

.active-scaffold textarea {
font-family: Arial, sans-serif;
font-size: 12px;
padding: 1px;
border: solid 1px #1F7F00;
}

.active-scaffold .checkbox-list {
padding-left: 0px;
}

.active-scaffold .checkbox-list li {
padding-right: 5px;
display: inline;
}

.active-scaffold .checkbox-list li label {
padding: 0 0 0 2px;
}

.active-scaffold .draggable-list {
float: left;
width: 300px;
margin-right: 15px;
min-height: 30px;
max-height: 100px;
overflow: auto;
background-color: #FFFF88;
}

.active-scaffold .draggable-list.hover {
opacity: 0.5;
}

.active-scaffold .draggable-list.selected {
background-color: #7FCF00;
}

.active-scaffold .draggable-list li {
display: block;
}

.active-scaffold .draggable-list input {
display: none;
}

/* Form :: Sub-Sections
   ============================== */

.active-scaffold li.sub-section {
clear: left;
padding: 5px 0;
}

/* Form :: Association Sub-Forms
   ============================== */

.active-scaffold .sub-form {
float: left;
clear: left;
padding: 5px 0;
padding-left: 5px;
}

.active-scaffold .sub-form h5 {
margin-left: -5px;
}

.active-scaffold .sub-form table,
.active-scaffold .sub-form table td {
width: auto;
background: none;
}

.active-scaffold .sub-form table th {
font: normal 10px verdana, sans-serif;
color: #555;
padding: 0 5px 0 1px;
background: none;
}

.active-scaffold .horizontal-sub-form td dt label {
display: none;
}

.active-scaffold .sub-form .checkbox-list {
padding: 0 2px 2px 2px;
background-color: #fff;
border: solid 1px #1F7F00;
}

.active-scaffold .sub-form .checkbox-list label {
display: block;
}

.active-scaffold .sub-form table td {
border: none;
background-color: transparent;
padding: 1px;
vertical-align: top;
color: #999;
}

.active-scaffold .sub-form .actions {
vertical-align: middle;
background-color: transparent;
clear: left;
}

.active-scaffold .sub-form .association-record a.destroy {
font-weight: bold;
display: block;
height: 16px;
padding: 0;
width: 16px;
text-indent: -4000px;
background: url(../../../images/active_scaffold/default/cross.png) 0 0 no-repeat;
}

.active-scaffold .sub-form .locked a.destroy {
display: none;
}

.active-scaffold .sub-form .association-record a {
font: bold 12px arial;
}

.active-scaffold .sub-form input.text-input,
.active-scaffold .sub-form select {
letter-spacing: 0;
font: bold 12px arial;
}

.active-scaffold .sub-form .footer-wrapper {
margin-top: 3px;
margin-right: 10px;
}

.active-scaffold .sub-form .footer {
color: #999;
padding: 3px 5px;
}

.active-scaffold .sub-form .footer select,
.active-scaffold .sub-form .footer input {
font-weight: bold;
font-size: 12px;
padding: 0;
}

.active-scaffold a.visibility-toggle {
font-size: 100%;
}

.active-scaffold-found {
  float:left;
}

